ingress/ing_web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
spec:
  rules:
    - host: helloworld.com
      http:
        paths:
          - path: /pod1
            pathType: Prefix
            backend:
              service:
                name: web-one-svc
                port:
                  number: 7070
          - path: /pod2
             pathType: Prefix
             backend:
               service:
                 name: web-two-svc
                 port:
                  number: 9090
